docs/versioned_docs/version-2.4.0/plans/get-checkout-link.md
---
sidebar_position: 2
---

# Get Checkout Link

Returns the checkout link for a plan. This endpoint will only work for paid Plans.

## Code Sample

```typescript
import { Salable } from '@salable/node-sdk';

const salable = new Salable('{{API_KEY}}');

const checkoutLink = await api.plans.getCheckoutLink('{{PLAN_UUID}}', {
  cancelUrl: 'https://example.com/cancel',
  successUrl: 'https://example.com/success',
  granteeId: 'userId-1',
  member: 'orgId_1',
});
```

## Parameters

##### planId (_required_)

_Type:_ `string`

The `uuid` of the Plan to get the checkout link from

##### queryParams (_required_)

_Type:_ `IPlanCheckoutInputParams`

Query parameters to be passed in to the checkout config

| **Parameter**     | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | **Required** |
| :---------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :----------: |
| successUrl        | The URL to send users if they have successfully completed a purchase                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |      ✅      |
| cancelUrl         | The URL to send users to if the transaction fails.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |      ✅      |
| member            | The purchaser of the license                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |      ✅      |
| granteeId         | Value to use as granteeId on Plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |      ✅      |
| marketingConsent  | Opt user in to marketing                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |      ❌      |
| couponCode        | Coupon code to be used on the checkout                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |      ❌      |
| promoCode         | Pre fills Promotion Code in checkout to offer discounts. The Code must be set in your payment provider. If you payment provider is paddle, you can pass the coupon code created in paddle dashboard. If your payment provider is Stripe use the Promotion Code ID which can be found in the Stripe dashboard. This cannot be edited by customer on checkout for stripe. If you want customer to enter the promo code field by themselves, please use allowPromoCodeparameter instead. To create promo code in stripe go to this URL, then create a coupon code. On the coupon code details page you will find promo code section, create promo code as per your need and use the promo code id to pass in this parameter, e.g.promo_xyzabc |      ❌      |
| allowPromoCode    | Enables Promotion Code field in checkout. For paddle this is true by default, if you pass false then it will hide promo code field in checkout. For stripe, either this parameter or the promoCode parameter has to be passed as both are not allowed together. If passed as true for stripe, it will show promo code field in checkout, if you want to prefill the promo code field in checkout then use promoCode parameter and not this one.                                                                                                                                                                                                                                                                                            |      ❌      |
| customer.email    | Prepopulated email for checkout customer                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |      ❌      |
| customer.country  | Prepopulated country for checkout customer                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |      ❌      |
| customer.postcode | Prepopulated postcode for checkout customer                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |      ❌      |
| vat.number        | Prefill the checkout form with the customer's VAT number                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |      ❌      |
| vat.companyName   | Prefill the checkout form with the customer's Company Name for VAT                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |      ❌      |
| vat.street        | Prefill the checkout form with the customer's Street for VAT                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |      ❌      |
| vat.city          | Prefill the checkout form with the customer's city for VAT                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |      ❌      |
| vat.state         | Prefill the checkout form with the customer's state for VAT                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |      ❌      |
| vat.country       | Prefill the checkout form with the customer's country for VAT                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |      ❌      |
| vat.postcode      | Prefill the checkout form with the customer's postcode for VAT                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |      ❌      |
| customMessage     | Add a message to show in Paddle checkout                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |      ❌      |

## Return Type

For more information about this request see our API documentation on [Plan checkout link](https://docs.salable.app/api#tag/Plans/operation/getPlanCheckoutLink)
